<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">workItOut</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="entranceButtonLabel">Entrance</string>
    <string name="lunchOutButtonLabel">Lunchtime</string>
    <string name="lunchInButtonLabel">Back from lunch</string>
    <string name="exitButtonLabel">Exit</string>
    <string name="clearButtonLabel">Delete</string>
    <string name="estimatedTimeLabel">Exit time:</string>
    <string name="notificationTitle">It\'s time to live! What about shutting everything off?</string>
    <string name="notificationMessage">The end of your working time has come</string>
    <string name="longTextForNotification">WorkItOut calculated that, considering your entrance and lunch time, the end of your working time has come. What about shutting everything off and going outside?</string>
    <string name="extraTimeLabel">Overtime:</string>
    <string name="workday_length_label">Work hours:</string>
    <string name="send_email">Send timings by mail</string>
    <string name="workday_hours">workday_hours</string>
    <string name="exit_stop_counting">Exit: Overtime counting stopped</string>
    <string name="restart_counting">Overtime counting restarted</string>
    <string name="workday_length_1">Okay, working time is long</string>
    <string name="workday_length_2"> hours and </string>
    <string name="workday_length_3"> minutes</string>
    <string name="email_subject">WorkItOut: today timetable </string>
    <string name="email_in_time">Entrance time: </string>
    <string name="email_lunch_time">Lunch time: </string>
    <string name="email_back_from_lunch">Back from lunch: </string>
    <string name="email_exit_time">Exit time: </string>
    <string name="email_total_time">Total working time: </string>
    <string name="email_extra_time">Overtime: </string>
    <string name="no_email_client">No mail client installed.</string>
    <string name="workday_duration_prefs_title">Workday duration</string>
    <string name="settings_title">Settings</string>
    <string name="alarm_activated">Alarm set at </string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Closed</string>
    <string name="title_activity_drawer_fragment">DrawerFragment</string>
    <string name="prefs_delete_timings">Delete timestamps</string>
    <string name="prefs_about">About WorkItOut</string>
    <string name="title_activity_about">About WorkItOut</string>
    <string name="app_author"><a href="http://www.marcozanetti.it">Marco Zanetti</a></string>
    <string name="author_email">Mail me: <a href="mailto:ilsecondodasinistra@gmail.com">ilsecondodasinistra@gmail.com</a></string>
    <string name="app_info">A working day is a long day, but can be even longer if you don\'t remember the time you came in, or how many minutes you spent in lunchtime.\nThis is where WorkItOut comes handy: just press a button and you\'re done. Check-in when you get to the office, then with a tap you can tell when you went to lunch and when you came back. From then on a timer is going to tell you how long it takes before you can safely leave the workplace.\n\nBut that\'s not the end! WorkItOut is notifying you when the working time is supposed to end. You can also export your daily timetable as email and send it to yourself in order to keep a tracking of your overtime.\nWorking time duration is completely customizable, the app is light, fast and completely ad-free.\n\nIt\'s time to WorkItOut.\n\nDo you like WorkItOut and would like to helo by testing new features? Check the beta versions by joining the Google Plus group: <a href="https://plus.google.com/communities/102279844132952268019\n\nWorkItOut">https://plus.google.com/communities/102279844132952268019</a>\n\nWorkItOut is free software! Feel free to grab the code at <a href="https://github.com/MarKco/workItOut">https://github.com/MarKco/workItOut</a> and collaborate!\n</string>
    <string name="app_changelog">Version 2.2\n- You can now share your daily timestamps via email\n- You can now customize your working time length\n\nVersion 2.2.1\n- Fixed wrong locales, now the app is in english in all countries except italy\n- Long press on a timestamp deletes itVersion 2.1\n- Bugfix: you can now cancel manual insertion of a timestamp\n- When inserting a new entrance timestamp old ones are deleted only if they belong to a previous day\n- You can change exit time\n\nVersion 2.0\n- You can change timestamps after first insert\n- You can stop overtime counting by stopping on the "Exit" button</string>
    <string name="changelog_title">Changelog</string>

</resources>