<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/settings_title">

  <PreferenceCategory
     android:title="@string/workday_duration_prefs_title">

<!--     <EditTextPreference -->
<!--         android:capitalize="words" -->
<!--         android:inputType="numberDecimal" -->
<!--         android:key="workday_hours" -->
<!--         android:maxLines="1" -->
<!--         android:selectAllOnFocus="true" -->
<!--         android:singleLine="true" -->
<!--         android:defaultValue="8.0" -->
<!--         android:maxLength="3" -->
<!--         android:title="@string/prefs_choose_workday_length" -->
<!--     /> -->
    
<com.ilsecondodasinistra.workitout.CustomTimeDialog
  android:name="Default notification time"
  android:summary=""
  android:dialogLayout="@layout/time_preference"
  android:title="@string/prefs_choose_workday_length"
  android:key="@string/workday_hours" />
     
  </PreferenceCategory>   
</PreferenceScreen>