<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation="vertical">

        <!--Data della session dd/mm/YYYY-->
        <TextView
            android:id="@+id/sessionworking_date"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:text="10/09/2014"
            android:gravity="center" />

        <TextView
            android:id="@+id/total_work_time"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:text="8 ore"
            android:gravity="center" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/red_industry">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/entranceButtonLabel"
                android:src="@drawable/industry" />

            <TextView
                android:id="@+id/entrance_time"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:layout_margin="1dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/red_industry">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/entranceButtonLabel"
                android:src="@drawable/clock" />

            <TextView
                android:id="@+id/exit_time"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:layout_margin="1dp"/>

        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:background="@color/yellow_sandwich">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/lunchOutButtonLabel"
                android:src="@drawable/burger"/>

            <TextView
                android:id="@+id/lunchout_time"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:layout_margin="1dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/lunchInButtonLabel"
                android:src="@drawable/industry"/>

            <TextView
                android:id="@+id/lunchin_time"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:layout_margin="1dp"/>

        </LinearLayout>


    </LinearLayout>


</LinearLayout>